--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
-		<title>Time Zone</title>
+		<title>World Clock</title>
 		<link rel="stylesheet" href="src/css.css" />
 	</head>
 	<body>
@@ -15,6 +15,14 @@
 			<option value="tokyo">Tokyo</option>
 			<option value="sydney">Sydney</option>
 		</select>
+		<footer
+			>This project was coded by
+			<a href="https://www.linkedin.com/in/victoria-moretti-934a2325a/"
+				>Vicky Moretti</a
+			>
+			and is
+			<a href="https://github.com/vickymoretti/time-zone-proj">open-source </a>
+		</footer>
 		<script src="src/index.js"></script>
 	</body>
 </html>
