adding a photo as background

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 		<link rel="stylesheet" href="src/css.css" />
 	</head>
 	<body>
-		<select name="time-zone" class="select-city" id="select-city">
-			<option value="">Select a city</option>
-			<option value="paris">Paris</option>
-			<option value="tokyo">Tokyo</option>
-			<option value="sydney">Sydney</option>
-		</select>
+		<div class="container">
+			<h1>World Clock</h1>
+			<select name="time-zone" class="select-city" id="select-city">
+				<option value="">Select a city</option>
+				<option value="paris">Paris</option>
+				<option value="tokyo">Tokyo</option>
+				<option value="sydney">Sydney</option>
+			</select>
+		</div>
 		<footer
 			>This project was coded by
 			<a href="https://www.linkedin.com/in/victoria-moretti-934a2325a/"
