--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
+			rel="stylesheet"
+		/>
 		<title>World Clock</title>
 		<link rel="stylesheet" href="src/css.css" />
 	</head>
@@ -17,6 +23,27 @@
 				<option value="tokyo">Tokyo</option>
 				<option value="sydney">Sydney</option>
 			</select>
+			<div class="city">
+				<div>
+					<h2>Dublin</h2>
+					<div class="date">June 23th 2023</div>
+				</div>
+				<div class="time"> 08:41 <small>AM</small> </div>
+			</div>
+			<div class="city">
+				<div>
+					<h2>Buenos Aires</h2>
+					<div class="date">June 23th 2023</div>
+				</div>
+				<div class="time"> 04:41 <small>AM</small> </div>
+			</div>
+			<div class="city">
+				<div>
+					<h2>Rome</h2>
+					<div class="date">June 23th 2023</div>
+				</div>
+				<div class="time"> 09:41 <small>AM</small> </div>
+			</div>
 		</div>
 		<footer
 			>This project was coded by
