--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
 				<option value="sydney">Sydney</option>
 			</select>
 			<div class="city">
-				<div>
+				<div id="dublin">
 					<h2>Dublin</h2>
 					<div class="date">June 23th 2023</div>
 				</div>
-				<div class="time"> 08:41 <small>AM</small> </div>
+				<div class="time"> 08:41:03 <small>AM</small> </div>
 			</div>
 			<div class="city">
-				<div>
+				<div id="buenos-aires">
 					<h2>Buenos Aires</h2>
 					<div class="date">June 23th 2023</div>
 				</div>
-				<div class="time"> 04:41 <small>AM</small> </div>
+				<div class="time"> 04:41:03 <small>AM</small> </div>
 			</div>
 			<div class="city">
-				<div>
+				<div id="rome">
 					<h2>Rome</h2>
 					<div class="date">June 23th 2023</div>
 				</div>
-				<div class="time"> 09:41 <small>AM</small> </div>
+				<div class="time"> 09:41:03 <small>AM</small> </div>
 			</div>
 		</div>
 		<footer
