--- a/index.html
+++ b/index.html
@@ -19,26 +19,29 @@
 			<h1>World Clock</h1>
 			<select name="time-zone" class="select-city" id="select-city">
 				<option value="">Select a city</option>
-				<option value="paris">Paris</option>
-				<option value="tokyo">Tokyo</option>
-				<option value="sydney">Sydney</option>
+				<option value="">My location</option>
+				<option value="Europe/London">London</option>
+				<option value="America/Los-Angeles">Los angeles</option>
+				<option value="Europe/Paris">Paris</option>
+				<option value="Asia/Tokyo">Tokyo</option>
+				<option value="Australia/Sydney">Sydney</option>
 			</select>
-			<div class="city">
-				<div id="dublin">
+			<div class="city" id="dublin">
+				<div>
 					<h2>Dublin</h2>
 					<div class="date">June 23th 2023</div>
 				</div>
 				<div class="time"> 08:41:03 <small>AM</small> </div>
 			</div>
-			<div class="city">
-				<div id="buenos-aires">
+			<div class="city" id="buenos-aires">
+				<div>
 					<h2>Buenos Aires</h2>
 					<div class="date">June 23th 2023</div>
 				</div>
 				<div class="time"> 04:41:03 <small>AM</small> </div>
 			</div>
-			<div class="city">
-				<div id="rome">
+			<div class="city" id="rome">
+				<div>
 					<h2>Rome</h2>
 					<div class="date">June 23th 2023</div>
 				</div>
