adding my current location

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>World Clock</h1>
 			<select name="time-zone" class="select-city" id="select-city">
 				<option value="">Select a city</option>
-				<option value="">My current location</option>
+				<option value="current">My current location</option>
 				<option value="Europe/London">London</option>
 				<option value="America/Los-Angeles">Los angeles</option>
 				<option value="Europe/Paris">Paris</option>
